--- a/部署.md
+++ b/部署.md
@@ -1,4 +1,6 @@
 # 环境部署步骤
+## 配置阿里云环境
+打开80端口和443端口
 ## 更新系统
 
 ```
@@ -59,8 +61,8 @@ server{
         server_name salent.vip;
 	    allow all;
     	ssl on;
-	    ssl_certificate /root/project/ssl/gl.vdrm.cn.pem;
-	    ssl_certificate_key /root/project/ssl/gl.vdrm.cn.key;
+	    ssl_certificate /root/projects/ssl/gl.vdrm.cn.pem;
+	    ssl_certificate_key /root/projects/ssl/gl.vdrm.cn.key;
 		charset utf-8;
 		location /static {
 			alias /root/projects/ToDo/ToDo/static;
